# foundryvtt-drag-ruler

./: .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  README.md  build_release.py  build_wasm.py  install_dev_dependencies.sh  module.json
.github/workflows/: main.yml
js/: api.js  compatibility.js  data_structures.js  foundry_fixes.js  foundry_imports.js  geometry.js  hex_support.js  keybindings.js  libwrapper_shim.js  main.js  migration.js  movement_tracking.js  pathfinding.js  queues.js  ruler.js  settings.js  socket.js  speed_provider.js  systems.js  util.js
lang/: de.json  en.json  es.json  fr.json  ja.json  ko.json  pt_BR.json  zh-tw.json  zh_Hans.json
rust/: Cargo.toml
rust/src/: geometry.rs  js_api.rs  lib.rs  pathfinder.rs  ptr_indexed_hash_set.rs  util.rs
src/: api.js  compatibility.js  data_structures.js  foundry_fixes.js  foundry_imports.js  hex_support.js  keybindings.js  libruler.js  libwrapper.js  libwrapper_shim.js  main.js  migration.js  movement_tracking.js  pathfinding.js  ruler.js  settings.js  socket.js  speed_provider.js  systems.js  util.js
templates/: speed_provider_settings.html
