[package]
name = "gridless-pathfinding"
version = "1.12.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
#debug = true

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.56"
rustc-hash = "1.1.0"
wasm-bindgen = "0.2.79"
